added new files

--- a/404.html
+++ b/404.html
@@ -51,8 +51,13 @@
 </head>
 <body>
     <h1>404</h1>
-    <h2>Yikes, nothing's working!</h2>
-    <p>Hmm Looks like there's nothing here?</p>
-    <a class="button" href="https://joseor1j.github.io/Portfolio/">Go Back.</a>
+    <h2>Hmm Looks like there's nothing here? </h2>
+    <p>Guess we have to go back </p>
+    <a class="button" href="https://joseor1j.github.io/Portfolio/">Go Back</a>
+
+    <p> <em> Made with <span style="color: #e25555;">&hearts;</span> in Los Angeles </em></p>
+        
+         
+     </div>
 </body>
 </html>
