added html file updates

--- a/404.html
+++ b/404.html
@@ -63,3 +63,11 @@
 </html>
 <!-- 11/27/19 -->
 <!--Last updated 2/9/20-->
+<!-- LU, 3/24/20 
+    7/13/20
+    CHANGELOG in progress 
+3 project files, COVID-19 source pr
+Slight modifications
+Added COVID-19 Dashboard text info
+Images
+-->
