--- a/404.html
+++ b/404.html
@@ -52,6 +52,7 @@
 <body>
     <h1>404</h1>
     <h2>Hmm Looks like there's nothing here? </h2>
+    <h3> Kyle is a bad QA tester </h3>
     <p>Guess we have to go back </p>
     <a class="button" href="https://joseor1j.github.io/Portfolio/">Go Back</a>
 
