--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
                         <div class="copyright">
                                <em> Made with <span style="color: #e25555;">&hearts;</span> in Los Angeles </em>
                             
-                            <p><i class="fa fa-copyright"></i>Jose Orozco, <i> <span id="year"> </span></p>
+                            <p><i class="fa fa-copyright"></i>Jose Orozco, <i> <i> 2024 </i><!--<span id="year">--> </span></p>
                             
                         </div>
                     </div>
