--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                             <div class="col-md-12">
                                 <h2>Check out my Resume!</h2>
                                 <div id="resume-button">
-                                    <a class="resume-btn wp4" href="OrozcoJoseResume.pdf" target="_blank">My Resume!</a>
+                                    <a class="resume-btn wp4" href="OrozcoJoseQAResume.pdf" target="_blank">My Resume!</a>
                                     <!-- add new resume, with links: non links for submission -->
                                 </div>
                             </div>
